# sample-flask-web

./: README.md  app.py  data.py  pyproject.toml
templates/: layout.html
templates/pages/: about.html  home.html  notfound.html
templates/partials/: navbar.html
