[tool.poetry]
name = "sample-flask-web"
version = "0.1.0"
description = ""
authors = ["sonusathyadas <sonusathyadas@hotmail.com>"]
readme = "README.md"
packages = [{include = "sample_flask_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
